<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdf8f7">

    <ImageView
        android:id="@+id/iv_backLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left"
        android:padding="10dp"
        android:src="@drawable/ic_back_arrow" />


    <LinearLayout
        android:layout_below="@+id/iv_backLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="2">

        <!--<ImageView-->
        <!--android:id="@+id/iv_logo"-->
        <!--android:layout_width="160dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:src="@drawable/ic_splash_motor" />-->


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_splash_motor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_back"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical">

            <com.automotive.bautomotive.custom.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_text"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/ll_mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_gray"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_mobile" />

                <com.automotive.bautomotive.custom.EditText_SFUI_Regular
                    android:id="@+id/et_mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="#00000000"
                    android:hint="@string/login_hint_mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/login_hint_color" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <com.automotive.bautomotive.custom.Button_sfuitext_regular
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rect_orange"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp" />


</RelativeLayout>