<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdf8f7">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_back_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_back"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <com.automotive.bautomotive.custom.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_verify_awesome"
                android:textColor="@color/text_color"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.automotive.bautomotive.custom.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_verify_otp_text"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text_color"
                app:bar_height="2dp"
                app:height="40dp"
                app:length="4"
                app:otp="1234"
                app:otp_text_size="24dp"
                app:width="40dp" />

            <!--<com.automotive.bautomotive.custom.EditText_SFUI_Regular-->
            <!--android:id="@+id/et_mobileNumber"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="#00000000"-->
            <!--android:hint="@string/login_hint_mobile_no"-->
            <!--android:inputType="number"-->
            <!--android:maxLength="4"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="@color/text_color"-->
            <!--android:textColorHint="@color/login_hint_color" />-->


            <!--<in.aabhasjindal.otptextview.OtpTextView-->
            <!--android:id="@+id/otp_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/text_color"-->
            <!--app:height="40dp"-->
            <!--app:width="40dp"-->
            <!--app:bar_enabled="true"-->
            <!--app:bar_height="2dp"-->
            <!--app:length="4"-->
            <!--app:otp="1234"-->
            <!--app:otp_text_size="20sp"/>-->


            <!--<LinearLayout-->
            <!--android:id="@+id/ll_mobileNumber"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@drawable/rect_gray"-->
            <!--android:orientation="horizontal"-->
            <!--android:padding="5dp">-->

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_margin="5dp"-->
            <!--android:src="@drawable/ic_mobile" />-->

            <!--<com.automotive.bautomotive.custom.EditText_SFUI_Regular-->
            <!--android:id="@+id/et_mobileNumber"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:background="#00000000"-->
            <!--android:inputType="number"-->
            <!--android:maxLength="10"-->
            <!--android:padding="5dp"-->
            <!--android:textColor="@color/text_color"-->
            <!--android:textColorHint="@color/login_hint_color" />-->
            <!--</LinearLayout>-->

            <com.automotive.bautomotive.custom.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:text="Resend OTP"
                android:textColor="@color/deep_orange"
                android:textSize="15sp" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:orientation="horizontal">-->

            <!--<CheckBox-->
            <!--android:layout_width="25dp"-->
            <!--android:layout_height="25dp"-->
            <!--android:layout_marginTop="8dp" />-->

            <!--<com.automotive.bautomotive.custom.MyTextView_Roboto_Regular-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="Remember me"-->
            <!--android:textColor="#4a4a4a"-->
            <!--android:textSize="15sp" />-->

            <!--<com.automotive.bautomotive.custom.MyTextView_Roboto_Regular-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:text="Forgot password?"-->
            <!--android:textColor="#ef5037"-->
            <!--android:textSize="15sp" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
            <!--android:id="@+id/ll_mobileNumber"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:background="@drawable/rect_gray"-->
            <!--android:orientation="horizontal"-->
            <!--android:padding="10dp">-->

            <!--<ImageView-->
            <!--android:layout_width="20dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:src="@mipmap/person" />-->

            <!--<com.automotive.bautomotive.custom.EditText_SFUI_Regular-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:background="#00000000"-->
            <!--android:hint="@string/login_hint_mobile_no"-->
            <!--android:inputType="text"-->
            <!--android:padding="8dp"-->
            <!--android:textColor="#000000"-->
            <!--android:textColorHint="#c6c6c6" />-->
            <!--</LinearLayout>-->

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="25dp"-->
        <!--android:background="@drawable/rect_gray"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="10dp">-->

        <!--<ImageView-->
        <!--android:layout_width="20dp"-->
        <!--android:layout_height="20dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:src="@mipmap/lock" />-->

        <!--<com.automotive.bautomotive.custom.EditText_SFUI_Regular-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:background="#00000000"-->
        <!--android:hint="Password"-->
        <!--android:inputType="textPassword"-->
        <!--android:padding="8dp"-->
        <!--android:textColor="#000000"-->
        <!--android:textColorHint="#c6c6c6" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:orientation="horizontal">-->

        <!--<CheckBox-->
        <!--android:layout_width="25dp"-->
        <!--android:layout_height="25dp"-->
        <!--android:layout_marginTop="8dp" />-->

        <!--<com.automotive.bautomotive.custom.MyTextView_Roboto_Regular-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_weight="1"-->
        <!--android:text="Remember me"-->
        <!--android:textColor="#4a4a4a"-->
        <!--android:textSize="15sp" />-->

        <!--<com.automotive.bautomotive.custom.MyTextView_Roboto_Regular-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:text="Forgot password?"-->
        <!--android:textColor="#ef5037"-->

        <!--android:textSize="15sp" />-->
        <!--</LinearLayout>-->

        <!--<com.automotive.bautomotive.custom.MyTextView_Roboto_Regular-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/ll_mobileNumber"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:text="Resend"-->
        <!--android:textColor="#ef5037"-->
        <!--android:textSize="15sp" />-->

        <!--<com.automotive.bautomotive.custom.Button_sfuitext_regular-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/ll_mobileNumber"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:layout_marginBottom="2dp"-->
        <!--android:background="@drawable/rect_orange"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:padding="15dp"-->
        <!--android:text="LOGIN"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textSize="15sp" />-->

    </RelativeLayout>

    <Button
        android:id="@+id/btn_getStartedNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rect_orange"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp" />


</RelativeLayout>